force-app/main/default/objects/RateCardItem__c/RateCardItem__c.object-meta.xml
<CustomObject>
    <label>Rate Card Item</label>
    <nameField>
        <displayFormat>RCI-{0000000}</displayFormat>
        <label>Rate Card Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rate Card Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>