force-app/main/default/objects/RateCardItem__c/fields/LocationCity__c.field-meta.xml
<CustomField>
    <fullName>LocationCity__c</fullName>
    <label>Location City</label>
    <length>96</length>
    <type>Text</type>
</CustomField>