force-app/main/default/objects/RateCardItem__c/fields/LocationCountry__c.field-meta.xml
<CustomField>
    <fullName>LocationCountry__c</fullName>
    <label>Location Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Countries</valueSetName>
    </valueSet>
</CustomField>