force-app/main/default/objects/RateCardItem__c/fields/LocationStateProvince__c.field-meta.xml
<CustomField>
    <fullName>LocationStateProvince__c</fullName>
    <label>Location State/Province</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LocationCountry__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>States</valueSetName>
    </valueSet>
</CustomField>