force-app/main/default/objects/RateCardItem__c/fields/MarginPercent__c.field-meta.xml
<CustomField>
    <fullName>MarginPercent__c</fullName>
    <formula>(UnitPrice__c - UnitCost__c)/UnitPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin Percent</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>