force-app/main/default/objects/RateCardItem__c/fields/PriceUOM__c.field-meta.xml
<CustomField>
    <fullName>PriceUOM__c</fullName>
    <label>Price UOM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PriceUOMs</valueSetName>
    </valueSet>
</CustomField>