force-app/main/default/objects/RateCardItem__c/fields/ProductId__c.field-meta.xml
<CustomField>
    <fullName>ProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Rate Card Items</relationshipLabel>
    <relationshipName>RateCardItems</relationshipName>
    <type>Lookup</type>
</CustomField>