force-app/main/default/objects/RateCardItem__c/fields/RateCardId__c.field-meta.xml
<CustomField>
    <fullName>RateCardId__c</fullName>
    <label>Rate Card</label>
    <referenceTo>RateCard__c</referenceTo>
    <relationshipLabel>Rate Card Items</relationshipLabel>
    <relationshipName>RateCardItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>