force-app/main/default/objects/RateCardItem__c/fields/SkillLevel__c.field-meta.xml
<CustomField>
    <fullName>SkillLevel__c</fullName>
    <label>Skill Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SkillLevels</valueSetName>
    </valueSet>
</CustomField>